Add \Phpcraft\Gamemode enum

--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,26 @@
 	"license": "MIT",
 	"autoload": {
 		"files": [
-			"src/Exception.class.php",
 			"src/Account.class.php",
+			"src/Event.class.php",
+			"src/Exception.class.php",
+			"src/Gamemode.class.php",
+			"src/Packet.class.php",
+			"src/Phpcraft.class.php",
+			"src/Server.class.php",
+			"src/Plugin.class.php",
+			"src/PluginManager.class.php",
+
 			"src/Connection.class.php",
 			"src/ClientConnection.class.php",
 			"src/ServerConnection.class.php",
-			"src/Server.class.php",
-			"src/Phpcraft.class.php",
-			"src/Packet.class.php",
+
 			"src/KeepAlivePacket.class.php",
 			"src/KeepAliveRequestPacket.class.php",
 			"src/KeepAliveResponsePacket.class.php",
+
 			"src/UserInterface.class.php",
-			"src/FancyUserInterface.class.php",
-			"src/Plugin.class.php",
-			"src/PluginManager.class.php",
-			"src/Event.class.php"
+			"src/FancyUserInterface.class.php"
 		]
 	},
 	"optimize-autoloader": true
