Switch to classmap autoloading

--- a/composer.json
+++ b/composer.json
@@ -6,31 +6,7 @@
 	"type": "library",
 	"license": "MIT",
 	"autoload": {
-		"files": [
-			"src/Account.class.php",
-			"src/Event.class.php",
-			"src/Exception.class.php",
-			"src/Gamemode.class.php",
-			"src/Difficulty.class.php",
-			"src/Dimension.class.php",
-			"src/Packet.class.php",
-			"src/Phpcraft.class.php",
-			"src/Server.class.php",
-			"src/Plugin.class.php",
-			"src/PluginManager.class.php",
-
-			"src/Connection.class.php",
-			"src/ClientConnection.class.php",
-			"src/ServerConnection.class.php",
-
-			"src/KeepAlivePacket.class.php",
-			"src/KeepAliveRequestPacket.class.php",
-			"src/KeepAliveResponsePacket.class.php",
-			"src/JoinGamePacket.class.php",
-
-			"src/UserInterface.class.php",
-			"src/FancyUserInterface.class.php"
-		]
+		"classmap": ["src/"]
 	},
 	"optimize-autoloader": true
 }
