--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "timmyrs/phpcraft",
-	"description": "A PHP library for all things Minecraft.",
+	"description": "A PHP library all about Minecraft: Java Edition.",
 	"keywords": ["minecraft", "minecraft-protocol"],
 	"homepage": "https://github.com/timmyrs/Phpcraft",
 	"type": "library",
