--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "timmyrs/phpcraft",
-	"description": "A PHP library all about Minecraft: Java Edition.",
+	"description": "A PHP library for all things Minecraft: Java Edition.",
 	"keywords": ["minecraft-api", "minecraft-library", "nbt-library", "minecraft-protocol", "mcje", "minecraft-java", "minecraft"],
 	"homepage": "https://github.com/timmyrs/Phpcraft",
 	"type": "library",
