Asyncronize authentication & improve dependencies

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,12 @@
 	},
 	"require": {
 		"php": "^7.0"
+	},
+	"require-dev": {
+		"ext-curl": "^7.0",
+		"ext-gmp": "^7.0",
+		"ext-mbstring": "^7.0",
+		"ext-mcrypt": "^7.0",
+		"ext-openssl": "^7.0"
 	}
 }
