Require ext-json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"classmap": ["src/"]
 	},
 	"require": {
-		"php": "^7.0"
+		"php": "^7.0",
+		"ext-json": "^1.4"
 	},
 	"require-dev": {
 		"ext-curl": "^7.0",
