--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
 		"ext-SPL": "^7.0",
 		"ext-json": "^1.4",
 		"ext-zlib": "^7.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^6.0 | ^7.0 | ^8.0"
 	}
 }
