--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"php": "^7.0",
 		"ext-SPL": "^7.0",
 		"ext-json": "^1.4",
-		"ext-zlib": "^7.0"
+		"ext-zlib": "^7.0",
+		"hellsh/uuid": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^6.0 | ^7.0 | ^8.0"
