--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 		"ext-SPL": "^7.0",
 		"ext-json": "^1.4",
 		"ext-zlib": "^7.0",
-		"hell-sh/enum": "dev-master",
-		"hell-sh/uuid": "dev-master",
+		"hell-sh/enum": "^1.0",
+		"hell-sh/uuid": "^1.0",
 		"phpseclib/mcrypt_compat": "^1.0"
 	},
 	"require-dev": {
