--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
   directories:
     - vendor
 script:
-  - mv vendor/.cache src/.cache
+  - if [[ -f "vendor/.cache" ]]; then mv vendor/.cache src/.cache; fi
   - composer install --no-dev
   - phpunit tests/ --testdox
-  - mv src/.cache vendor/.cache
+  - if [[ -f "src/.cache" ]]; then mv src/.cache vendor/.cache; fi
