Use pai for asynchronous input on Windows

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 		"ext-openssl": "*",
 		"hell-sh/enum": "^1.0",
 		"hell-sh/uuid": "^1.0",
+		"hell-sh/pai": "^2.0",
 		"phpseclib/mcrypt_compat": "^1.0"
 	},
 	"require-dev": {
