--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,7 @@
 	"name": "timmyrs/phpcraft",
 	"description": "A PHP library for all things Minecraft: Java Edition.",
 	"keywords": [
-		"minecraft-api",
-		"minecraft-library",
-		"nbt-library",
-		"minecraft-protocol",
-		"mcje",
-		"minecraft-java",
-		"minecraft"
+		"minecraft-api", "minecraft-library", "nbt-library", "minecraft-protocol", "mcje", "minecraft-java", "minecraft"
 	],
 	"homepage": "https://github.com/timmyrs/Phpcraft",
 	"type": "library",
