--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 		"ext-gmp": "*",
 		"ext-curl": "*",
 		"ext-openssl": "*",
+		"ext-sockets": "*",
 		"hell-sh/enum": "^1.1",
 		"hell-sh/uuid": "^1.1",
 		"hell-sh/pai": "^2.0",
