Remove version from ext-json, sort alphabetically

--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
 	},
 	"require": {
 		"php": "^7.0",
-		"ext-json": "^1.4",
-		"ext-SPL": "*",
-		"ext-zlib": "*",
-		"ext-mbstring": "*",
-		"ext-gmp": "*",
 		"ext-curl": "*",
+		"ext-gmp": "*",
+		"ext-json": "*",
+		"ext-mbstring": "*",
 		"ext-openssl": "*",
 		"ext-sockets": "*",
+		"ext-SPL": "*",
+		"ext-zlib": "*",
 		"hell-sh/enum": "^1.1",
 		"hell-sh/uuid": "^1.1",
 		"hell-sh/pai": "^2.0",
