--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 		"ext-SPL": "*",
 		"ext-zlib": "*",
 		"hell-sh/enum": "^1.1",
-		"hell-sh/hotswapp": "dev-master",
+		"hell-sh/hotswapp": "^1.1",
 		"hell-sh/pas": "^1.4.1",
 		"hell-sh/uuid": "^1.2",
 		"phpseclib/mcrypt_compat": "^1.0"
