--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
 		"ext-sockets": "*",
 		"ext-SPL": "*",
 		"ext-zlib": "*",
+		"hell-sh/asyncore": "^2.0",
 		"hell-sh/enum": "^1.1",
 		"hell-sh/hotswapp": "^1.1",
-		"hell-sh/pas": "^1.4.1",
 		"hell-sh/uuid": "^1.2",
 		"phpseclib/mcrypt_compat": "^1.0"
 	},
